# RSS-Collect

./: LICENSE.txt  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: run-tauri.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
