[package]
name = "rss-collector"
version = "1.1.0"
edition = "2021"
authors = ["Jumarf"]
license = "LicenseRef-Proprietary"
description = "RSS-Collector"
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.10.3", default-features = false, features = ["wry", "compression", "dynamic-acl"] }

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
